--- a/public/output.css
+++ b/public/output.css
@@ -1116,6 +1116,14 @@ input:checked + .toggle-bg {
   top: 205rem;
 }
 
+.top-\[90rem\] {
+  top: 90rem;
+}
+
+.top-\[110rem\] {
+  top: 110rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -1144,20 +1152,12 @@ input:checked + .toggle-bg {
   top: 5rem;
 }
 
-.top-\[110rem\] {
-  top: 110rem;
-}
-
 .left-32 {
   left: 8rem;
 }
 
 .top-14 {
   top: 3.5rem;
-}
-
-.top-\[90rem\] {
-  top: 90rem;
 }
 
 .top-0 {
@@ -1174,18 +1174,6 @@ input:checked + .toggle-bg {
 
 .right-0 {
   right: 0px;
-}
-
-.top-\[140rem\] {
-  top: 140rem;
-}
-
-.top-\[86rem\] {
-  top: 86rem;
-}
-
-.top-\[105rem\] {
-  top: 105rem;
 }
 
 .z-50 {
@@ -1208,6 +1196,10 @@ input:checked + .toggle-bg {
   z-index: 40;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
 .m-3 {
   margin: 0.75rem;
 }
@@ -1216,9 +1208,31 @@ input:checked + .toggle-bg {
   margin: 1.25rem;
 }
 
+.m-8 {
+  margin: 2rem;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .mr-3 {
@@ -1465,6 +1479,22 @@ input:checked + .toggle-bg {
   width: 1rem;
 }
 
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[47\%\] {
+  width: 47%;
+}
+
+.w-\[46\%\] {
+  width: 46%;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1533,8 +1563,21 @@ input:checked + .toggle-bg {
   cursor: not-allowed;
 }
 
+.touch-pan-x {
+  --tw-pan-x: pan-x;
+  touch-action: var(--tw-pan-x) var(--tw-pan-y) var(--tw-pinch-zoom);
+}
+
 .resize {
   resize: both;
+}
+
+.snap-x {
+  scroll-snap-type: x var(--tw-scroll-snap-strictness);
+}
+
+.snap-mandatory {
+  --tw-scroll-snap-strictness: mandatory;
 }
 
 .grid-cols-\[6\%_94\%\] {
@@ -1569,12 +1612,48 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-\[40\%_40\%\] {
+  grid-template-columns: 40% 40%;
+}
+
+.grid-cols-\[40\%_10\%_40\%\] {
+  grid-template-columns: 40% 10% 40%;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-\[43\%_14\%_43\%\] {
+  grid-template-columns: 43% 14% 43%;
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.place-content-between {
+  place-content: space-between;
+}
+
+.place-content-around {
+  place-content: space-around;
 }
 
 .place-items-center {
@@ -1613,6 +1692,18 @@ input:checked + .toggle-bg {
   gap: 1rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -1620,6 +1711,21 @@ input:checked + .toggle-bg {
 
 .gap-y-4 {
   row-gap: 1rem;
+}
+
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1646,6 +1752,12 @@ input:checked + .toggle-bg {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-12 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(3rem * var(--tw-space-y-reverse));
+}
+
 .self-center {
   align-self: center;
 }
@@ -1656,6 +1768,10 @@ input:checked + .toggle-bg {
 
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .whitespace-nowrap {
@@ -1928,6 +2044,10 @@ input:checked + .toggle-bg {
   padding: 0.25rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -2113,12 +2233,12 @@ input:checked + .toggle-bg {
   font-weight: 600;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .italic {
@@ -2235,6 +2355,10 @@ input:checked + .toggle-bg {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 .ease-in-out {
