--- a/public/output.css
+++ b/public/output.css
@@ -1120,28 +1120,24 @@ input:checked + .toggle-bg {
   top: 90rem;
 }
 
-.top-\[110rem\] {
-  top: 110rem;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
 
-.top-\[30rem\] {
-  top: 30rem;
+.top-\[26rem\] {
+  top: 26rem;
 }
 
 .left-1\/2 {
   left: 50%;
 }
 
-.top-\[90\%\] {
-  top: 90%;
+.top-\[30rem\] {
+  top: 30rem;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
+.top-\[90\%\] {
+  top: 90%;
 }
 
 .left-6 {
@@ -1150,6 +1146,10 @@ input:checked + .toggle-bg {
 
 .top-20 {
   top: 5rem;
+}
+
+.top-\[110rem\] {
+  top: 110rem;
 }
 
 .left-32 {
@@ -1180,10 +1180,6 @@ input:checked + .toggle-bg {
   z-index: 50;
 }
 
-.z-30 {
-  z-index: 30;
-}
-
 .z-20 {
   z-index: 20;
 }
@@ -1196,8 +1192,8 @@ input:checked + .toggle-bg {
   z-index: 40;
 }
 
-.z-0 {
-  z-index: 0;
+.z-30 {
+  z-index: 30;
 }
 
 .m-3 {
@@ -1208,31 +1204,13 @@ input:checked + .toggle-bg {
   margin: 1.25rem;
 }
 
-.m-8 {
-  margin: 2rem;
-}
-
 .m-4 {
   margin: 1rem;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-12 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .mr-3 {
@@ -1257,6 +1235,10 @@ input:checked + .toggle-bg {
 
 .mt-9 {
   margin-top: 2.25rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .mt-\[10rem\] {
@@ -1355,6 +1337,18 @@ input:checked + .toggle-bg {
   height: 22rem;
 }
 
+.h-\[40rem\] {
+  height: 40rem;
+}
+
+.h-\[50\%\] {
+  height: 50%;
+}
+
+.h-\[3rem\] {
+  height: 3rem;
+}
+
 .h-\[50rem\] {
   height: 50rem;
 }
@@ -1365,14 +1359,6 @@ input:checked + .toggle-bg {
 
 .h-\[70\%\] {
   height: 70%;
-}
-
-.h-\[3rem\] {
-  height: 3rem;
-}
-
-.h-3 {
-  height: 0.75rem;
 }
 
 .h-\[30rem\] {
@@ -1395,10 +1381,6 @@ input:checked + .toggle-bg {
   height: 28rem;
 }
 
-.h-\[40rem\] {
-  height: 40rem;
-}
-
 .h-\[36\.5rem\] {
   height: 36.5rem;
 }
@@ -1417,6 +1399,10 @@ input:checked + .toggle-bg {
 
 .h-4 {
   height: 1rem;
+}
+
+.h-\[35rem\] {
+  height: 35rem;
 }
 
 .w-8 {
@@ -1443,8 +1429,8 @@ input:checked + .toggle-bg {
   width: 95%;
 }
 
-.w-3 {
-  width: 0.75rem;
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-72 {
@@ -1453,6 +1439,10 @@ input:checked + .toggle-bg {
 
 .w-\[48\%\] {
   width: 48%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .w-\[27rem\] {
@@ -1479,20 +1469,48 @@ input:checked + .toggle-bg {
   width: 1rem;
 }
 
-.w-\[50\%\] {
-  width: 50%;
+.w-\[1324px\] {
+  width: 1324px;
 }
 
-.w-\[40\%\] {
-  width: 40%;
+.w-\[1200px\] {
+  width: 1200px;
 }
 
-.w-\[47\%\] {
-  width: 47%;
+.w-\[1000px\] {
+  width: 1000px;
 }
 
-.w-\[46\%\] {
-  width: 46%;
+.w-\[900px\] {
+  width: 900px;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[99\%\] {
+  width: 99%;
+}
+
+.w-\[97\%\] {
+  width: 97%;
+}
+
+.w-\[96\%\] {
+  width: 96%;
+}
+
+.w-\[98\%\] {
+  width: 98%;
+}
+
+.w-\[97\.5\%\] {
+  width: 97.5%;
+}
+
+.w-\[97\.3\%\] {
+  width: 97.3%;
 }
 
 .flex-1 {
@@ -1563,25 +1581,16 @@ input:checked + .toggle-bg {
   cursor: not-allowed;
 }
 
-.touch-pan-x {
-  --tw-pan-x: pan-x;
-  touch-action: var(--tw-pan-x) var(--tw-pan-y) var(--tw-pinch-zoom);
-}
-
 .resize {
   resize: both;
 }
 
-.snap-x {
-  scroll-snap-type: x var(--tw-scroll-snap-strictness);
-}
-
-.snap-mandatory {
-  --tw-scroll-snap-strictness: mandatory;
-}
-
 .grid-cols-\[6\%_94\%\] {
   grid-template-columns: 6% 94%;
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-\[15\%_85\%\] {
@@ -1590,6 +1599,10 @@ input:checked + .toggle-bg {
 
 .grid-cols-\[50\%_50\%\] {
   grid-template-columns: 50% 50%;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-\[33\%_67\%\] {
@@ -1604,40 +1617,8 @@ input:checked + .toggle-bg {
   grid-template-columns: 25% 25% 25% 25%;
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-\[40\%_40\%\] {
-  grid-template-columns: 40% 40%;
-}
-
-.grid-cols-\[40\%_10\%_40\%\] {
-  grid-template-columns: 40% 10% 40%;
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-\[43\%_14\%_43\%\] {
-  grid-template-columns: 43% 14% 43%;
-}
-
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -1646,10 +1627,6 @@ input:checked + .toggle-bg {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.place-content-between {
-  place-content: space-between;
 }
 
 .place-content-around {
@@ -1692,14 +1669,6 @@ input:checked + .toggle-bg {
   gap: 1rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-12 {
-  gap: 3rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1713,19 +1682,9 @@ input:checked + .toggle-bg {
   row-gap: 1rem;
 }
 
-.gap-x-6 {
-  -moz-column-gap: 1.5rem;
-       column-gap: 1.5rem;
-}
-
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
-}
-
-.gap-x-16 {
-  -moz-column-gap: 4rem;
-       column-gap: 4rem;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1740,22 +1699,10 @@ input:checked + .toggle-bg {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-12 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3rem * var(--tw-space-y-reverse));
 }
 
 .self-center {
@@ -1768,10 +1715,6 @@ input:checked + .toggle-bg {
 
 .overflow-y-scroll {
   overflow-y: scroll;
-}
-
-.scroll-smooth {
-  scroll-behavior: smooth;
 }
 
 .whitespace-nowrap {
@@ -1796,10 +1739,6 @@ input:checked + .toggle-bg {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-l-lg {
@@ -2042,10 +1981,6 @@ input:checked + .toggle-bg {
 
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .py-4 {
@@ -2353,12 +2288,12 @@ input:checked + .toggle-bg {
   transition-duration: 150ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
-}
-
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .ease-in-out {
