--- a/public/output.css
+++ b/public/output.css
@@ -1180,6 +1180,34 @@ input:checked + .toggle-bg {
   right: 0px;
 }
 
+.top-\[6rem\] {
+  top: 6rem;
+}
+
+.left-\[40rem\] {
+  left: 40rem;
+}
+
+.left-\[20rem\] {
+  left: 20rem;
+}
+
+.left-\[22rem\] {
+  left: 22rem;
+}
+
+.left-\[21rem\] {
+  left: 21rem;
+}
+
+.left-\[25rem\] {
+  left: 25rem;
+}
+
+.left-\[12rem\] {
+  left: 12rem;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -1210,6 +1238,30 @@ input:checked + .toggle-bg {
 
 .m-4 {
   margin: 1rem;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.m-\[3rem\] {
+  margin: 3rem;
+}
+
+.m-20 {
+  margin: 5rem;
+}
+
+.m-24 {
+  margin: 6rem;
+}
+
+.m-96 {
+  margin: 24rem;
+}
+
+.m-\[20\%\] {
+  margin: 20%;
 }
 
 .mx-auto {
@@ -1284,6 +1336,54 @@ input:checked + .toggle-bg {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mt-\[6rem\] {
+  margin-top: 6rem;
+}
+
+.mt-\[1rem\] {
+  margin-top: 1rem;
+}
+
+.mt-\[4rem\] {
+  margin-top: 4rem;
+}
+
+.mt-\[3rem\] {
+  margin-top: 3rem;
+}
+
+.mb-\[3rem\] {
+  margin-bottom: 3rem;
+}
+
+.ml-\[18rem\] {
+  margin-left: 18rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.ml-\[120rem\] {
+  margin-left: 120rem;
+}
+
+.ml-\[24rem\] {
+  margin-left: 24rem;
+}
+
+.ml-\[30rem\] {
+  margin-left: 30rem;
+}
+
+.ml-96 {
+  margin-left: 24rem;
 }
 
 .block {
@@ -1430,6 +1530,10 @@ input:checked + .toggle-bg {
   height: 16rem;
 }
 
+.h-\[10rem\] {
+  height: 10rem;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -1516,6 +1620,14 @@ input:checked + .toggle-bg {
 
 .w-\[10rem\] {
   width: 10rem;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[70rem\] {
+  width: 70rem;
 }
 
 .flex-1 {
@@ -1630,6 +1742,10 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1686,6 +1802,10 @@ input:checked + .toggle-bg {
   gap: 0.5rem;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -1705,6 +1825,18 @@ input:checked + .toggle-bg {
        column-gap: 1rem;
 }
 
+.gap-y-0 {
+  row-gap: 0px;
+}
+
+.gap-y-\[2rem\] {
+  row-gap: 2rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1721,6 +1853,10 @@ input:checked + .toggle-bg {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.place-self-center {
+  place-self: center;
 }
 
 .self-center {
