--- a/public/output.css
+++ b/public/output.css
@@ -1180,34 +1180,6 @@ input:checked + .toggle-bg {
   right: 0px;
 }
 
-.top-\[6rem\] {
-  top: 6rem;
-}
-
-.left-\[40rem\] {
-  left: 40rem;
-}
-
-.left-\[20rem\] {
-  left: 20rem;
-}
-
-.left-\[22rem\] {
-  left: 22rem;
-}
-
-.left-\[21rem\] {
-  left: 21rem;
-}
-
-.left-\[25rem\] {
-  left: 25rem;
-}
-
-.left-\[12rem\] {
-  left: 12rem;
-}
-
 .z-50 {
   z-index: 50;
 }
@@ -1240,28 +1212,12 @@ input:checked + .toggle-bg {
   margin: 1rem;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
 .m-\[3rem\] {
   margin: 3rem;
 }
 
-.m-20 {
-  margin: 5rem;
-}
-
 .m-24 {
   margin: 6rem;
-}
-
-.m-96 {
-  margin: 24rem;
-}
-
-.m-\[20\%\] {
-  margin: 20%;
 }
 
 .mx-auto {
@@ -1318,6 +1274,10 @@ input:checked + .toggle-bg {
   margin-left: 1.25rem;
 }
 
+.mt-\[3rem\] {
+  margin-top: 3rem;
+}
+
 .mt-\[19rem\] {
   margin-top: 19rem;
 }
@@ -1338,52 +1298,12 @@ input:checked + .toggle-bg {
   margin-bottom: 0.25rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
-.mt-\[6rem\] {
-  margin-top: 6rem;
-}
-
-.mt-\[1rem\] {
-  margin-top: 1rem;
-}
-
-.mt-\[4rem\] {
-  margin-top: 4rem;
-}
-
-.mt-\[3rem\] {
-  margin-top: 3rem;
-}
-
-.mb-\[3rem\] {
-  margin-bottom: 3rem;
-}
-
-.ml-\[18rem\] {
-  margin-left: 18rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.ml-\[120rem\] {
-  margin-left: 120rem;
-}
-
-.ml-\[24rem\] {
-  margin-left: 24rem;
-}
-
-.ml-\[30rem\] {
-  margin-left: 30rem;
-}
-
-.ml-96 {
-  margin-left: 24rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .block {
@@ -1466,6 +1386,10 @@ input:checked + .toggle-bg {
   height: 20rem;
 }
 
+.h-\[16rem\] {
+  height: 16rem;
+}
+
 .h-\[30rem\] {
   height: 30rem;
 }
@@ -1518,20 +1442,16 @@ input:checked + .toggle-bg {
   height: 1rem;
 }
 
-.h-\[15rem\] {
-  height: 15rem;
+.h-10 {
+  height: 2.5rem;
 }
 
-.h-\[18rem\] {
-  height: 18rem;
+.h-14 {
+  height: 3.5rem;
 }
 
-.h-\[16rem\] {
-  height: 16rem;
-}
-
-.h-\[10rem\] {
-  height: 10rem;
+.h-5 {
+  height: 1.25rem;
 }
 
 .w-8 {
@@ -1560,6 +1480,10 @@ input:checked + .toggle-bg {
 
 .w-\[25rem\] {
   width: 25rem;
+}
+
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .w-72 {
@@ -1606,28 +1530,20 @@ input:checked + .toggle-bg {
   width: 1rem;
 }
 
-.w-60 {
-  width: 15rem;
+.w-10 {
+  width: 2.5rem;
 }
 
-.w-\[60\%\] {
-  width: 60%;
+.w-14 {
+  width: 3.5rem;
 }
 
-.w-\[30\%\] {
-  width: 30%;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-\[10rem\] {
-  width: 10rem;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[70rem\] {
-  width: 70rem;
+.w-7 {
+  width: 1.75rem;
 }
 
 .flex-1 {
@@ -1742,8 +1658,8 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1802,10 +1718,6 @@ input:checked + .toggle-bg {
   gap: 0.5rem;
 }
 
-.gap-0 {
-  gap: 0px;
-}
-
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -1823,14 +1735,6 @@ input:checked + .toggle-bg {
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
-}
-
-.gap-y-0 {
-  row-gap: 0px;
-}
-
-.gap-y-\[2rem\] {
-  row-gap: 2rem;
 }
 
 .gap-y-2 {
@@ -1853,10 +1757,6 @@ input:checked + .toggle-bg {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.place-self-center {
-  place-self: center;
 }
 
 .self-center {
@@ -1893,10 +1793,6 @@ input:checked + .toggle-bg {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-full {
@@ -1965,15 +1861,6 @@ input:checked + .toggle-bg {
 .border-blue-600 {
   --tw-border-opacity: 1;
   border-color: rgb(28 100 242 / var(--tw-border-opacity));
-}
-
-.border-transparent {
-  border-color: transparent;
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-gray-600 {
@@ -2097,6 +1984,31 @@ input:checked + .toggle-bg {
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 56 118 / var(--tw-bg-opacity));
+}
+
+.bg-blue-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 66 159 / var(--tw-bg-opacity));
+}
+
+.bg-cyan-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 78 99 / var(--tw-bg-opacity));
+}
+
+.bg-sky-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 74 110 / var(--tw-bg-opacity));
+}
+
+.bg-indigo-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 47 120 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -2283,6 +2195,22 @@ input:checked + .toggle-bg {
   padding-top: 0.5rem;
 }
 
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2398,6 +2326,11 @@ input:checked + .toggle-bg {
   color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -2418,55 +2351,16 @@ input:checked + .toggle-bg {
   opacity: 1;
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-gray-300 {
-  --tw-shadow-color: #D1D5DB;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-gray-500 {
-  --tw-shadow-color: #6B7280;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-gray-800 {
-  --tw-shadow-color: #1F2937;
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .outline {
@@ -2522,6 +2416,10 @@ input:checked + .toggle-bg {
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.ease-linear {
+  transition-timing-function: linear;
 }
 
 .responsive {
@@ -2593,11 +2491,6 @@ body {
   height: calc(100vh - 2rem);
 }
 
-.hover\:gap-x-4:hover {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
 .hover\:border-2:hover {
   border-width: 2px;
 }
@@ -2666,14 +2559,14 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-blue-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(28 100 242 / var(--tw-text-opacity));
-}
-
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-600:hover {
@@ -2785,6 +2678,11 @@ body {
 
 .dark .dark\:bg-gray-800\/50 {
   background-color: rgb(31 41 55 / 0.5);
+}
+
+.dark .dark\:bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 56 118 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-opacity-80 {
