--- a/public/output.css
+++ b/public/output.css
@@ -1180,6 +1180,38 @@ input:checked + .toggle-bg {
   right: 0px;
 }
 
+.top-\[86rem\] {
+  top: 86rem;
+}
+
+.top-\[97rem\] {
+  top: 97rem;
+}
+
+.top-\[120rem\] {
+  top: 120rem;
+}
+
+.top-\[130rem\] {
+  top: 130rem;
+}
+
+.top-\[150rem\] {
+  top: 150rem;
+}
+
+.top-\[136rem\] {
+  top: 136rem;
+}
+
+.top-\[140rem\] {
+  top: 140rem;
+}
+
+.top-\[900rem\] {
+  top: 900rem;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -1198,6 +1230,14 @@ input:checked + .toggle-bg {
 
 .z-30 {
   z-index: 30;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.z-0 {
+  z-index: 0;
 }
 
 .m-3 {
@@ -1304,6 +1344,18 @@ input:checked + .toggle-bg {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mt-\[20rem\] {
+  margin-top: 20rem;
+}
+
+.mt-\[15rem\] {
+  margin-top: 15rem;
+}
+
+.mt-\[16rem\] {
+  margin-top: 16rem;
 }
 
 .block {
@@ -1454,6 +1506,10 @@ input:checked + .toggle-bg {
   height: 1.25rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -1544,6 +1600,38 @@ input:checked + .toggle-bg {
 
 .w-7 {
   width: 1.75rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[400rem\] {
+  width: 400rem;
+}
+
+.w-\[125rem\] {
+  width: 125rem;
+}
+
+.w-\[40rem\] {
+  width: 40rem;
+}
+
+.w-\[80rem\] {
+  width: 80rem;
+}
+
+.w-\[60rem\] {
+  width: 60rem;
+}
+
+.w-\[70rem\] {
+  width: 70rem;
 }
 
 .flex-1 {
@@ -1662,6 +1750,10 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1718,6 +1810,26 @@ input:checked + .toggle-bg {
   gap: 0.5rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-24 {
+  gap: 6rem;
+}
+
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -1739,6 +1851,10 @@ input:checked + .toggle-bg {
 
 .gap-y-2 {
   row-gap: 0.5rem;
+}
+
+.gap-y-1 {
+  row-gap: 0.25rem;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2070,6 +2186,10 @@ input:checked + .toggle-bg {
   padding: 0.75rem;
 }
 
+.p-24 {
+  padding: 6rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -2113,6 +2233,26 @@ input:checked + .toggle-bg {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.px-36 {
+  padding-left: 9rem;
+  padding-right: 9rem;
+}
+
+.py-52 {
+  padding-top: 13rem;
+  padding-bottom: 13rem;
 }
 
 .pl-1 {
@@ -2211,6 +2351,34 @@ input:checked + .toggle-bg {
   padding-top: 1.25rem;
 }
 
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
+}
+
+.pr-24 {
+  padding-right: 6rem;
+}
+
+.pb-36 {
+  padding-bottom: 9rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2261,6 +2429,11 @@ input:checked + .toggle-bg {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
